<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <Button
                android:id="@+id/btn_native"
                style="@style/demo_button"
                android:text="@string/load_and_show_native" />

            <Button
                android:id="@+id/btn_request_itl"
                style="@style/demo_button"
                android:text="@string/request_ad_itl" />

            <Button
                android:id="@+id/btn_request_rwd"
                style="@style/demo_button"
                android:text="@string/request_ad_rwd" />

            <Button
                android:id="@+id/btn_request_banner"
                style="@style/demo_button"
                android:text="@string/request_ad_banner" />

            <Button
                android:id="@+id/btn_request_banner250"
                style="@style/demo_button"
                android:text="@string/request_ad_banner250" />

            <FrameLayout
                android:id="@+id/banner_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <FrameLayout
                android:id="@+id/native_render_container"
                android:layout_width="match_parent"
                android:layout_height="340dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:background="#dddddd"
                    android:gravity="center"
                    android:text="@string/native_ad_container"
                    android:textColor="#ffffff"
                    android:textSize="30sp" />
            </FrameLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>